--- a/index.html
+++ b/index.html
@@ -589,40 +589,51 @@
 					</div>
 					<div class="projects row">
 						<div class="project-container">
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-								<h5 class="projectCell"> Computer Architecture </h5>
-								<div class="projectContent">
-									<a href="http://goo.gl/A7YkST" target="_blank"><img src="images/cs33.png" alt="Computer Science 33 Notes"></a>
+							<div class="row" style="margin-top: 10px; margin-bottom: 20px;">
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Computer Architecture </h5>
+									<div class="projectContent">
+										<a href="http://goo.gl/A7YkST" target="_blank"><img src="images/cs33.png" alt="Computer Science 33 Notes"></a>
+									</div>
+									<p class="description"> These are some notes from Week 7 onwards for the final of CS 33 </p>
 								</div>
-								<p class="description"> These are some notes from Week 7 onwards for the final of CS 33 </p>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Software Construction Lab </h5>
+									<div class="projectContent">
+										<a href="http://goo.gl/fxU7P0" target="_blank"><img src="images/cs35L.png" alt="Computer Science 35L Notes"></a>
+									</div>
+									<p class="description"> These are a quarter worth of notes from Lauren Samy's version of CS 35L </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Operating Systems Principles</h5>
+									<div class="projectContent">
+										<a href="http://goo.gl/VQ6ST1" target="_blank"><img src="images/cs111.png" alt="Computer Science 111 Notes"></a>
+									</div>
+									<p class="description"> These are a quarter worth of notes from Professor Mark Kampe's teaching of CS 111 </p>
+								</div>
 							</div>
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-								<h5 class="projectCell"> Software Construction Lab </h5>
-								<div class="projectContent">
-									<a href="http://goo.gl/fxU7P0" target="_blank"><img src="images/cs35L.png" alt="Computer Science 35L Notes"></a>
+							<div class="row" style="margin-top: 10px; margin-bottom: 20px;">
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Network Fundamentals </h5>
+									<div class="projectContent">
+										<a href="https://goo.gl/TBVqnz" target="_blank"><img src="images/cs118.png" alt="Computer Science 118 Notes"></a>
+									</div>
+									<p class="description"> These are a quarter worth of notes from Professor Lixia Zhang's teaching of CS 118 </p>
 								</div>
-								<p class="description"> These are a quarter worth of notes from Lauren Samy's version of CS 35L </p>
-							</div>
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-								<h5 class="projectCell"> Operating Systems Principles</h5>
-								<div class="projectContent">
-									<a href="http://goo.gl/VQ6ST1" target="_blank"><img src="images/cs111.png" alt="Computer Science 111 Notes"></a>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Introduction to Algorithms and Complexity</h5>
+									<div class="projectContent">
+										<a href="https://goo.gl/UjYAgY" target="_blank"><img src="images/cs180.png" alt="Computer Science 180 Notes"></a>
+									</div>
+									<p class="description"> These are a quarter worth of notes from Professor Majid Sarrafzadeh's teaching of CS 180 </p>
 								</div>
-								<p class="description"> These are a quarter worth of notes from Professor Mark Kampe's teaching of CS 111 </p>
-							</div>
-							<div class="col-xs-12 col-sm-6 col-md-6 projectCell">
-								<h5 class="projectCell"> Network Fundamentals </h5>
-								<div class="projectContent">
-									<a href="https://goo.gl/TBVqnz" target="_blank"><img src="images/cs118.png" alt="Computer Science 118 Notes"></a>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Computer Systems Architecture</h5>
+									<div class="projectContent">
+										<a href="https://goo.gl/SS5P27" target="_blank"><img src="images/csm151b.png" alt="Computer Science M151B Notes"></a>
+									</div>
+									<p class="description"> These are my notes from Professor Reinman's teaching of CS M151B  </p>
 								</div>
-								<p class="description"> These are a quarter worth of notes from Professor Lixia Zhang's teaching of CS 118 </p>
-							</div>
-							<div class="col-xs-12 col-sm-6 col-md-6 projectCell">
-								<h5 class="projectCell"> Introduction to Algorithms and Complexity</h5>
-								<div class="projectContent">
-									<a href="https://goo.gl/UjYAgY" target="_blank"><img src="images/cs180.png" alt="Computer Science 180 Notes"></a>
-								</div>
-								<p class="description"> These are a quarter worth of notes from Professor Majid Sarrafzadeh's teaching of CS 180 </p>
 							</div>
 						</div>
 					</div>
