--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					In addition to my teaching endeavours, I love to apply my knowledge into practicalities through various projects and organizations. As such I am an <b>iOS Project Lead</b> and board member at <a href="http://www.uclacreatives.com" target="_blank">Creative Labs</a>,
 					organizing member as a <b>developer</b> at <a href="http://www.lahacks.com" target="_blank">LAHacks</a> and organizing member for 2017 at <a href="http://uclafs.com/" target="_blank">Founder's School</a>.<br>
 					If you have reached the end of this brief description of me as a person, then I assume you are interested in working with me or meeting me. If so feel 
-					free to explore <a id="goto" href="#work" onclick="changeContent(event)">my work</a> and <a href="../Jahan Kuruvilla Cherian Resume.pdf" target="_blank">resume</a>, 
+					free to explore <a id="goto" href="#work" onclick="changeContent(event)">my work</a> and <a href="./resume.pdf" target="_blank">resume</a>, 
 					browse my publicly available <a id="goto" href="#notes" onclick="changeContent(event)">notes</a>, and reach out to me through any of my social profiles so that we can do great things together!
 					</p>
 				</div>
@@ -703,7 +703,7 @@
 							</a>
 						</div>
 						<div class="icons">
-							<a href="../Jahan Kuruvilla Cherian Resume.pdf" target="_blank">
+							<a href="./resume.pdf" target="_blank">
 								<img class="social-icons" src="images/resume.png">
 							</a>
 						</div>
