--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</div>
 			<div class="main-content">
 				<div id="about" class="about" >
-					<p> Indian born, Dubai raised, British taught, American schooled… I am a multi-cultured and world travelled <b>computer science major</b> currently in my <b>third year</b> at <b>UCLA</b>.<br>
+					<p> Indian born, Dubai raised, British taught, American schooled… I am a multi-cultured and world travelled <b>computer science major</b> currently in my <b>senior year</b> at <b>UCLA</b>.<br>
 					In my journey through the road of 1’s and 0’s I have found that the true power of a computer scientist lies in the ability to shape reality and transform the future all while sitting behind the screen of a 13-inch computer. 
 					I have learnt that it is not only the movement of one’s fingers across a sleek keyboard, transcribing code like a conductor directs a musical masterpiece, 
 					but also the ability to convey my ideas and share my experiences and learnings that allows me to help shape the lives around me for the better.<br>
@@ -124,6 +124,41 @@
 						<div class="projects row">
 							<div class="project-container">
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Uber </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/uber.png" alt="Uber">
+									</div>
+									<p class="description"> Working on Developer Experience for Mobile Engineers</p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Pomily </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/pomily.png" alt="Pomily">
+									</div>
+									<p class="description"> Building the next generation platform for beauty and makeup </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> DevX </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/DevX.png" alt="DevX">
+									</div>
+									<p class="description"> Leading the organization to solve Bruins' frustrations through tech </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Quotebook </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/Quotebook.png" alt="Quotebook">
+									</div>
+									<p class="description"> Remember loved ones like never before </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Bruinscope </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/bruinscope.png" alt="Bruinscope">
+									</div>
+									<p class="description"> Simplifying the interview process at UCLA</p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Autodesk </h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/autodesk.png" alt="Autodesk">
@@ -131,18 +166,18 @@
 									<p class="description"> Working on enhancing AutoCAD</p>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-									<h5 class="projectCell"> LA Hacks</h5>
+									<h5 class="projectCell"> LA Hacks 2017</h5>
 									<div class="projectContent">
-										<img onclick="showDetail(event)" src="images/lahacks.png" alt="LA Hacks">
+										<img onclick="showDetail(event)" src="images/lahacks.png" alt="LA Hacks 2017">
 									</div>
-									<p class="description"> Building the infrastructure for LA Hacks</p>
+									<p class="description"> Web infrastructure for LA Hacks 2017</p>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-									<h5 class="projectCell"> Creative Labs</h5>
+									<h5 class="projectCell"> Creative Labs 2017</h5>
 									<div class="projectContent">
-										<img onclick="showDetail(event)" src="images/creativelabs.png" alt="Creative Labs">
+										<img onclick="showDetail(event)" src="images/creativelabs.png" alt="Creative Labs 2017">
 									</div>
-									<p class="description"> iOS Project Lead for Creative Labs</p>
+									<p class="description"> iOS Project Lead for Creative Labs 2017</p>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Future Without Borders </h5>
@@ -187,21 +222,13 @@
 									<p class="description"> Leave messages on maps for others to find </p>
 								</div>
 								<!-- Change this back to col-xs-12 col-sm-6 col-md-4; when more projects are added -->
-								<div class="col-xs-12 col-sm-6 col-md-12 projectCell">
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Time Travel Tycoon</h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/time_travel_tycoon.png" alt="Time Travel Tycoon">
 									</div>
 									<p class="description"> Become a billionaire with time</p>
 								</div>
-								<!-- Only release information about the app once live
-								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-									<h5 class="projectCell"> Quotebook </h5>
-									<div class="projectContent">
-										<img onclick="showDetail(event)" src="images/Quotebook.png" alt="Quotebook">
-									</div>
-									<p class="description"> Remember your loved ones like never before </p>
-								</div>-->
 							</div>
 						</div>
 						<div class="project-info">
@@ -210,7 +237,54 @@
 							</div>
 							<div class="project-info-container">
 								<div class="project-title">
-									<h3>LA Hacks</h3>
+									<h3>Uber</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/uber-full.jpg" alt="Uber">
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> Backend Infrastructure<br>
+									<b>Languages:</b> Golang, Java <br>
+									<b>Creation:</b> Summer 2017 <br>
+									<b>Details:</b><br>
+									Worked on two projects for improving the developer experience for mobile engineers at Uber, while also optimizing existing services. The first project revolved around creating a Go service to provide remote device connection for application testing of the mobile applications. Utilizing third party services to provide remote device connection, the device labs project provides an API and device agnostic wrapper to various functionality with devices including connection and disconnection. It was usable through a friendly commandline interface, with logging and metrics collection. <br> The second project build an event pipeline for differential builds from Phabricator and Jenkins. It provided strong metrics and a notification system capable of failure commenting.
+									</p>
+								</div>	
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>Pomily</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/pomily-full.png" alt="Pomily">
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> Backend Web Development<br>
+									<b>Languages:</b> Ruby (Ruby on Rails) <br>
+									<b>Creation:</b> Present <br>
+									<b>Details:</b><br>
+									Co-Founder and CTO of Pomily. 
+									</p>
+								</div>	
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>DevX</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/devx-full.png" alt="DevX">
+								</div>
+								<div class="project-details">
+									<p> <b>Position:</b> President<br>
+									<b>Date:</b> Present <br>
+									<b>Details:</b><br>
+									President of DevX at UCLA.
+									</p>
+								</div>	
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>LA Hacks 2017</h3>
 								</div>
 								<div class="project-media">
 									<img src="images/lahacksfront.png" alt="LAHacks website front">
@@ -232,7 +306,7 @@
 							</div>
 							<div class="project-info-container">
 								<div class="project-title">
-									<h3>Creative Labs</h3>
+									<h3>Creative Labs 2017</h3>
 								</div>
 								<div class="project-media">
 									<img src="images/creativelabsfront.png" alt="Creative Labs at work">
