--- a/index.html
+++ b/index.html
@@ -709,6 +709,29 @@
 									<p class="description"> These are my notes from Professor Reinman's teaching of CS M151B  </p>
 								</div>
 							</div>
+							<div class="row" style="margin-top: 10px; margin-bottom: 20px;">
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Fundamentals of Artificial Intelligence</h5>
+									<div class="projectContent">
+										<a href="https://goo.gl/AqEJo1" target="_blank"><img src="images/cs161.png" alt="Computer Science 161 Notes"></a>
+									</div>
+									<p class="description"> These are my notes from Professor van den Broeck's teaching of CS 161  </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Formal Languages and Automata Theory</h5>
+									<div class="projectContent">
+										<a href="https://goo.gl/7BsmkA" target="_blank"><img src="images/cs181.png" alt="Computer Science 181 Notes"></a>
+									</div>
+									<p class="description"> These are my notes from Professor Sherstov's teaching of CS 181  </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> LA: Introduction to Computer Science</h5>
+									<div class="projectContent">
+										<a href="https://goo.gl/vhZxoF" target="_blank"><img src="images/cs32.png" alt="Computer Science 32 Slides"></a>
+									</div>
+									<p class="description"> These are my slides I made as a Learning Assistant for CS 32  </p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
