Update personal information

--- a/index.html
+++ b/index.html
@@ -92,17 +92,18 @@
 					In my journey through the road of 1’s and 0’s I have found that the true power of a computer scientist lies in the ability to shape reality and transform the future all while sitting behind the screen of a 13-inch computer. 
 					I have learnt that it is not only the movement of one’s fingers across a sleek keyboard, transcribing code like a conductor directs a musical masterpiece, 
 					but also the ability to convey my ideas and share my experiences and learnings that allows me to help shape the lives around me for the better.<br>
-					As an avid <b>iOS developer</b> and ambitious <b>systems programmer</b>, I hope to use my skills in the field of software engineering to guide people and 
-					companies to a higher level. I have worked with several people to bring about some impactful applications, and have worked with well reputed companies like 
-					<a href="http://www.autodesk.com/" target="_blank">Autodesk</a> to help push the boundaries of existing products.<br>
+					I am constantly curious about the ever changing world of software engineering, having first found love as an avid <b>iOS developer</b>. After about a year in the space, I decided to switch my specialty to being a <b>Backend Engineer</b> for both web applications and for the lowest levels of <b>infrastructure</b>. My current interests include <b>distributed systems</b> and <b>blockchain technology</b>.
+					I hope to use the various skills and experiences I've picked up over the past couple of years to serve the overall community in a positive way.
+					I love working with companies to elevate their products and ambitions, having worked as a Software Engineering Intern at <a href="http://www.autodesk.com/" target="_blank">Autodesk</a> and <a href="https://www.uber.com/" target="_blank">Uber</a>. I will be pursuing a <b>Full time Software Engineering</b> position at <b>Uber</b> starting <em>Fall 2018</em>.
 					But my passion doesn’t stop at the intricacies of computer science, they continue to flow into the field of art through the form of <b>graphic design and illustration</b>. 
 					Working through <b>Sketch</b> I use my intuition and gut feeling to design the best possible UI/UX that goes into my apps, and follow through by creating 
 					the graphics that truly resonate with who I am. <br>
 					These are my passions, but what are passions if we don’t try and share them with the world… Throughout my schooling journey and beyond, I have always chosen 
-					to <b>teach what I have learnt</b> as best as I could to those willing to learn. As the <b>tutoring chair</b> for both <b>Tau Beta Pi</b> and 
-					<b>Upsilon Pi Epsilon</b> at UCLA, I wish to help those struggling in engineering and computer science find the same love and passion as I have for the field.<br>
-					In addition to my teaching endeavours, I love to apply my knowledge into practicalities through various projects and organizations. As such I am an <b>iOS Project Lead</b> and board member at <a href="http://www.uclacreatives.com" target="_blank">Creative Labs</a>,
-					organizing member as a <b>developer</b> at <a href="http://www.lahacks.com" target="_blank">LAHacks</a> and organizing member for 2017 at <a href="http://uclafs.com/" target="_blank">Founder's School</a>.<br>
+					to <b>teach what I have learnt</b> as best as I could to those willing to learn. As the former <b>tutoring chair</b> for both <b>Tau Beta Pi</b> and 
+					<b>Upsilon Pi Epsilon</b> at UCLA, I helped those struggling in engineering and computer science find the same love and passion as I have for the field.<br>
+					I am taking my teaching ability to new heights by being a <b>Learning Assistant</b> for <b>CS 32</b> this quarter at UCLA.
+					In addition to my teaching endeavours, I love to apply my knowledge into practicalities through various projects and organizations. I am currently growing my leadership and management skills as the <b>President</b> of <a href="http://ucladevx.com/#/" target="_blank">DevX</a>, <b>Co-director</b> of <a href="https://lahacks.com/" target="_blank">LA Hacks</a> and as an ex Product Manager for an iOS project at <a href="http://www.uclacreatives.com" target="_blank">Creative Labs</a>.<br>
+					Last but not least, I hope to carry forth all that I have learnt as both a developer, designer and product manager to eventually drive the entrepreneur within me. As such I am one of the <b>founders</b> and <b>CTO</b> of <a href="http://www.pomily.com/" target="_blank">Pomily</a>, one of the <b>Entrepreneurship Chairs</b> for UPE, leading initiatives such as <a href="http://uclafs.com/#/" target="_blank">Founder's School</a>.<br>
 					If you have reached the end of this brief description of me as a person, then I assume you are interested in working with me or meeting me. If so feel 
 					free to explore <a id="goto" href="#work" onclick="changeContent(event)">my work</a> and <a href="./resume.pdf" target="_blank">resume</a>, 
 					browse my publicly available <a id="goto" href="#notes" onclick="changeContent(event)">notes</a>, and reach out to me through any of my social profiles so that we can do great things together!
@@ -111,12 +112,7 @@
 				<div id="work" class="work">
 					<div id="code" class="code">
 						<div class="work-text">
-							<p> Through my classes at UCLA, I have gained a deep understanding and knowledge of <b>C</b> and <b>C++</b> 
-							along with low-level systems programming. Such knowledge along with Computer graphics, enabled me to work on 
-							graphic call serialization for IPC for AutoCAD at <a href="http://www.autodesk.com/" target="_blank">Autodesk</a>
-							this past summer. In my free time I am an avid <b>iOS developer</b> as showcased by the projects listed below, 
-							and occasionally venture out of my comfort zone and involve myself with <b>backend web development</b>, <b>VR</b>, <b>game development</b>
-							and general <b>Python</b> and <b>BASH</b> scripting.<br>
+							<p> The past four years of programming have taken me through a whirlwind of several programming languages, helping me hone my skills as a low-level systems programmer for AutoCAD at <a href="http://www.autodesk.com/" target="_blank">Autodesk</a>, an iOS developer on several side projects, a backend web developer for my <a href="http://www.pomily.com" target="_blank">startup, Pomily</a> and various projects such as <a href="http://grade-portal.herokuapp.com" target="_blank">GradePortal</a>. Taking my passion for working behind the scenes I fell in love with infrastructure as an intern on the Mobile Developer Platform team at <a href="https://www.uber.com/" target="_blank">Uber</a>. I will be joining Uber full time this year, hoping to take my skills to new heights in the field of infrastructure and distributed systems.
 
 							If my work or skillset interest you, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Working%20together%20" target="_top">contact me</a>!
 							</p>
@@ -532,10 +528,7 @@
 					</div>
 					<div id="design" class="design">
 						<div class="design-text">
-							<p> I have always had a passion for art and visual effects, and just recently started to express that through some graphic design
-							using vector illustration. My current design focuses on very flat design, made entirely in <a href="https://www.sketchapp.com/" target="_blank">Sketch</a>.
-							I am slowly finding more and more interest in the field of <b>product design</b> and am hoping to expand my design skillset. If you have any tips and advice or want to work with me in the design space, feel free to
-							<a href="mailto:jcherian@g.ucla.eduu?Subject=Design" target="_top">contact me</a> as I would love to hear from you! </p>
+							<p> Using <a href="https://www.sketchapp.com/" target="_blank">Sketch</a> as my weapon of choice, I have worked with designing simple vector illustrations to various interfaces focused on providing the most seamless user experiences. In almost all of my projects I have primarily been a mix of developer and designer. I hope to continuosly expand this skillset and welcome any and all <a href="mailto:jcherian@g.ucla.eduu?Subject=Design" target="_top">feedback</a>. Below are some of my illustrations from two summers ago!
 						</div>
 						<div class="projects row">
 							<div class="project-container">
@@ -751,7 +744,7 @@
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 contact-info">
 						<p> Feel free to send me a message at if you have any questions about my experience and <a id="goto" href="#work" onclick="changeContent(event)">work</a>,
-						or if you simply need a freelancer specializing in <b>iOS Development</b> and some <b> design</b>.
+						or if you simply need a freelancer specializing in <b>iOS Development</b>, <b>Backend Web Development</b> and/or some <b> design</b>.
 						If you want a more personal connection point, you can always visit any of my social media as listed at 
 						the bottom of this page. I can also be directly reached at jcherian@g.ucla.edu. I look forward to hearing from you! </p>
 					</div>
